[gd_scene load_steps=7 format=2]

[ext_resource path="res://items/all/acid/acid_icon.png" type="Texture" id=1]
[ext_resource path="res://items/global/inventory_element.gd" type="Script" id=2]
[ext_resource path="res://resources/themes/inventory_button_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/sounds/inventory_element_focus.wav" type="AudioStream" id=4]
[ext_resource path="res://ui/sounds/water_drop_drip_single_09.wav" type="AudioStream" id=5]
[ext_resource path="res://resources/fonts/actual/base/font_floating_text.tres" type="DynamicFont" id=6]

[node name="InventoryElement" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1824.0
margin_bottom = -984.0
rect_min_size = Vector2( 96, 96 )
theme = ExtResource( 3 )
icon = ExtResource( 1 )
expand_icon = true
script = ExtResource( 2 )
sound_on_focus = ExtResource( 4 )
sound_on_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 51.0
margin_right = 90.0
margin_bottom = 96.0
size_flags_vertical = 8
custom_fonts/font = ExtResource( 6 )
align = 2
valign = 2

[connection signal="focus_entered" from="." to="." method="_on_InventoryElement_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_InventoryElement_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_InventoryElement_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InventoryElement_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_InventoryElement_pressed"]
